# So-Free-Knowledge

./: .gitignore  INSTALL_OPENCLAW.md  README.md  agent_main.py  config.yaml  main.py  pytest.ini  requirements.txt  start_insight.py
plan/: cli.py  (+4 more)
sofree-knowledge-cli/: README.md  pyproject.toml
sofree-knowledge-cli/.pytest_tmp/assistant_demo/: access.json  documents.json  knowledge.json  messages.json  personal_brief_2026-04-26.md
sofree-knowledge-cli/.pytest_tmp/test_auth_status_redacts_token0/: token.json
sofree-knowledge-cli/.pytest_tmp/test_policy_can_set_chat_only0/: knowledge_policy.json
sofree-knowledge-cli/src/sofree_knowledge/: __init__.py  archive.py  assistant_brief.py  assistant_online.py  auth.py  auth_device_flow.py  auth_token_manager.py  auth_token_store.py  chat_keyword_workflow.py  cli.py  config.py  confused_detector.py  feishu_client.py  interest_filter.py  lingo_auto.py  lingo_context.py  lingo_store.py  logging_config.py  policy.py  wikisheet.py
sofree-knowledge-cli/src/sofree_knowledge/app/: cli.py
sofree-knowledge-cli/src/sofree_knowledge/assistant/: __init__.py  collector.py  dual_tower_dataset.py  features.py  models.py  profile.py  ranker.py  renderer.py  retriever.py  service.py  training.py  two_tower.py
sofree-knowledge-cli/tests/: conftest.py  test_archive.py  test_assistant_brief.py  test_assistant_online.py  test_assistant_profile.py  test_auth.py  test_chat_keyword_workflow.py  test_cli.py  test_config.py  test_confused_detector.py  test_dual_tower_dataset.py  test_feishu_client.py  test_interest_filter.py  test_policy.py
(+162 files in other folders)
