[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sofree-knowledge"
version = "0.1.0"
description = "Standalone CLI for SoFree Knowledge message collection and Feishu OAuth."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sofree-knowledge = "sofree_knowledge.cli:main"
sofree-knowledge-app = "sofree_knowledge.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sofree_knowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
